# vietnamesekey

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  RELEASE_NOTES_V2.5.md  build_and_reload.sh  notebooklm_script.txt
addon/: vietnamesekey.conf
debian/: changelog  control  rules
include/: shadow_engine.h  vn_constants.h
inputmethod/: vietnamesekey-telex.conf  vietnamesekey-vni.conf
src/: shadow_engine.cpp  vietnamesekey_fcitx.cpp
